// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getBackgroundStyles Get correct block background styles for color layer with border 1`] = `
Object {
  "maxi-test > .maxi-background-displayer": Object {
    "border": Object {
      "general": Object {
        "border-bottom-left-radius": "180px",
        "border-bottom-right-radius": "180px",
        "border-bottom-style": "solid",
        "border-bottom-width": "2px",
        "border-color": "rgba(var(--maxi-light-color-5),1)",
        "border-left-style": "solid",
        "border-left-width": "2px",
        "border-right-style": "solid",
        "border-right-width": "2px",
        "border-top-left-radius": "180px",
        "border-top-right-radius": "180px",
        "border-top-style": "solid",
        "border-top-width": "2px",
      },
      "l": Object {},
      "m": Object {},
      "s": Object {},
      "xl": Object {},
      "xs": Object {},
      "xxl": Object {},
    },
    "size": Object {
      "general": Object {
        "left": "-2px",
        "top": "-2px",
      },
    },
  },
  "maxi-test > .maxi-background-displayer .maxi-background-displayer__0": Object {
    "color": Object {
      "general": Object {
        "background-color": "rgba(var(--maxi-light-color-1),0.07)",
        "clip-path": "polygon(50% 0%, 0% 100%, 100% 100%)",
        "display": "block",
      },
      "l": Object {
        "background-color": "rgba(var(--maxi-light-color-1),0.07)",
        "clip-path": "polygon(50% 0%, 0% 100%, 100% 100%)",
      },
      "label": "Background Color",
      "m": Object {
        "background-color": "rgba(var(--maxi-light-color-1),0.07)",
        "clip-path": "polygon(50% 0%, 0% 100%, 100% 100%)",
      },
      "s": Object {
        "background-color": "rgba(var(--maxi-light-color-1),0.07)",
        "clip-path": "polygon(50% 0%, 0% 100%, 100% 100%)",
      },
      "xl": Object {
        "background-color": "rgba(var(--maxi-light-color-1),0.07)",
        "clip-path": "polygon(50% 0%, 0% 100%, 100% 100%)",
      },
      "xs": Object {
        "background-color": "rgba(var(--maxi-light-color-1),0.07)",
        "clip-path": "polygon(50% 0%, 0% 100%, 100% 100%)",
      },
      "xxl": Object {
        "background-color": "rgba(var(--maxi-light-color-1),0.07)",
        "clip-path": "polygon(50% 0%, 0% 100%, 100% 100%)",
      },
    },
  },
}
`;

exports[`getBackgroundStyles Get correct block background styles for color layer with different values on different responsive stages 1`] = `
Object {
  "maxi-test > .maxi-background-displayer": Object {
    "border": Object {
      "general": Object {},
      "l": Object {},
      "m": Object {},
      "s": Object {},
      "xl": Object {},
      "xs": Object {},
      "xxl": Object {},
    },
  },
  "maxi-test > .maxi-background-displayer .maxi-background-displayer__0": Object {
    "color": Object {
      "general": Object {
        "background-color": "rgba(var(--maxi-light-color-1),0.07)",
        "clip-path": "polygon(50% 0%, 0% 100%, 100% 100%)",
        "display": "block",
      },
      "l": Object {
        "background-color": "rgba(var(--maxi-light-color-4),0.3)",
        "clip-path": "polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%)",
      },
      "label": "Background Color",
      "m": Object {
        "background-color": "rgba(var(--maxi-light-color-5),0.59)",
        "clip-path": "polygon(50% 0%, 80% 10%, 100% 35%, 100% 70%, 80% 90%, 50% 100%, 20% 90%, 0% 70%, 0% 35%, 20% 10%)",
      },
      "s": Object {
        "background-color": "rgba(204,68,68,0.59)",
        "clip-path": "polygon(0% 20%, 60% 20%, 60% 0%, 100% 50%, 60% 100%, 60% 80%, 0% 80%)",
      },
      "xl": Object {
        "background-color": "rgba(var(--maxi-light-color-1),0.07)",
        "clip-path": "polygon(50% 0%, 0% 100%, 100% 100%)",
      },
      "xs": Object {
        "background-color": "rgba(204,68,68,0.59)",
        "clip-path": "polygon(20% 0%, 0% 20%, 30% 50%, 0% 80%, 20% 100%, 50% 70%, 80% 100%, 100% 80%, 70% 50%, 100% 20%, 80% 0%, 50% 30%)",
      },
      "xxl": Object {
        "background-color": "rgba(var(--maxi-light-color-2),0.2)",
        "clip-path": "polygon(20% 0%, 80% 0%, 100% 100%, 0% 100%)",
      },
    },
  },
}
`;

exports[`getBackgroundStyles Get correct block background styles for color layer with different values on different responsive stages and hover 1`] = `
Object {
  "maxi-test > .maxi-background-displayer": Object {
    "border": Object {
      "general": Object {},
      "l": Object {},
      "m": Object {},
      "s": Object {},
      "xl": Object {},
      "xs": Object {},
      "xxl": Object {},
    },
  },
  "maxi-test > .maxi-background-displayer .maxi-background-displayer__0": Object {
    "color": Object {
      "general": Object {
        "background-color": "rgba(var(--maxi-light-color-1),0.07)",
        "clip-path": "polygon(50% 0%, 0% 100%, 100% 100%)",
        "display": "block",
      },
      "l": Object {
        "background-color": "rgba(var(--maxi-light-color-4),0.3)",
        "clip-path": "polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%)",
      },
      "label": "Background Color",
      "m": Object {
        "background-color": "rgba(var(--maxi-light-color-5),0.59)",
        "clip-path": "polygon(50% 0%, 80% 10%, 100% 35%, 100% 70%, 80% 90%, 50% 100%, 20% 90%, 0% 70%, 0% 35%, 20% 10%)",
      },
      "s": Object {
        "background-color": "rgba(204,68,68,0.59)",
        "clip-path": "polygon(0% 20%, 60% 20%, 60% 0%, 100% 50%, 60% 100%, 60% 80%, 0% 80%)",
      },
      "xl": Object {
        "background-color": "rgba(var(--maxi-light-color-1),0.07)",
        "clip-path": "polygon(50% 0%, 0% 100%, 100% 100%)",
      },
      "xs": Object {
        "background-color": "rgba(204,68,68,0.59)",
        "clip-path": "polygon(20% 0%, 0% 20%, 30% 50%, 0% 80%, 20% 100%, 50% 70%, 80% 100%, 100% 80%, 70% 50%, 100% 20%, 80% 0%, 50% 30%)",
      },
      "xxl": Object {
        "background-color": "rgba(var(--maxi-light-color-2),0.2)",
        "clip-path": "polygon(20% 0%, 80% 0%, 100% 100%, 0% 100%)",
      },
    },
  },
}
`;

exports[`getBackgroundStyles Get correct block background styles for different layers, onces created on normal and other on hover 1`] = `
Object {
  "maxi-test > .maxi-background-displayer": Object {
    "border": Object {
      "general": Object {},
      "l": Object {},
      "m": Object {},
      "s": Object {},
      "xl": Object {},
      "xs": Object {},
      "xxl": Object {},
    },
  },
  "maxi-test > .maxi-background-displayer .maxi-background-displayer__2": Object {
    "color": Object {
      "general": Object {
        "background-color": "rgba(var(--maxi-light-color-1),1)",
        "display": "block",
      },
      "l": Object {
        "background-color": "rgba(var(--maxi-light-color-1),1)",
      },
      "label": "Background Color",
      "m": Object {
        "background-color": "rgba(var(--maxi-light-color-1),1)",
      },
      "s": Object {
        "background-color": "rgba(var(--maxi-light-color-1),1)",
      },
      "xl": Object {
        "background-color": "rgba(var(--maxi-light-color-1),1)",
      },
      "xs": Object {
        "background-color": "rgba(var(--maxi-light-color-1),1)",
      },
      "xxl": Object {
        "background-color": "rgba(var(--maxi-light-color-1),1)",
      },
    },
  },
  "maxi-test > .maxi-background-displayer .maxi-background-displayer__3": Object {
    "shape": Object {
      "general": Object {
        "bottom": "0%",
        "display": "block",
        "left": "0%",
        "right": "0%",
        "top": "0%",
        "width": "100%",
      },
      "l": Object {
        "bottom": "0%",
        "left": "0%",
        "right": "0%",
        "top": "0%",
        "width": "100%",
      },
      "label": "SVG Wrapper Background",
      "m": Object {
        "bottom": "0%",
        "left": "0%",
        "right": "0%",
        "top": "0%",
        "width": "100%",
      },
      "s": Object {
        "bottom": "0%",
        "left": "0%",
        "right": "0%",
        "top": "0%",
        "width": "100%",
      },
      "xl": Object {
        "bottom": "0%",
        "left": "0%",
        "right": "0%",
        "top": "0%",
        "width": "100%",
      },
      "xs": Object {
        "bottom": "0%",
        "left": "0%",
        "right": "0%",
        "top": "0%",
        "width": "100%",
      },
      "xxl": Object {
        "bottom": "0%",
        "left": "0%",
        "right": "0%",
        "top": "0%",
        "width": "100%",
      },
    },
  },
  "maxi-test > .maxi-background-displayer .maxi-background-displayer__3 > svg:first-child": Object {
    "shape": Object {},
  },
  "maxi-test > .maxi-background-displayer .maxi-background-displayer__3 > svg:first-child pattern image": Object {
    "shape": Object {},
  },
  "maxi-test > .maxi-background-displayer .maxi-background-displayer__3 svg *": Object {
    "shape": Object {
      "general": Object {
        "fill": "rgba(var(--maxi-light-color-4),1)",
      },
      "l": Object {
        "fill": "rgba(var(--maxi-light-color-4),1)",
      },
      "label": "SVG Background",
      "m": Object {
        "fill": "rgba(var(--maxi-light-color-4),1)",
      },
      "s": Object {
        "fill": "rgba(var(--maxi-light-color-4),1)",
      },
      "xl": Object {
        "fill": "rgba(var(--maxi-light-color-4),1)",
      },
      "xs": Object {
        "fill": "rgba(var(--maxi-light-color-4),1)",
      },
      "xxl": Object {
        "fill": "rgba(var(--maxi-light-color-4),1)",
      },
    },
  },
  "maxi-test > .maxi-background-displayer .maxi-background-displayer__4": Object {
    "video": Object {
      "general": Object {
        "display": "block",
        "opacity": 1,
      },
      "l": Object {
        "opacity": 1,
      },
      "label": "Video Background",
      "m": Object {
        "opacity": 1,
      },
      "s": Object {
        "opacity": 1,
      },
      "xl": Object {
        "opacity": 1,
      },
      "xs": Object {
        "opacity": 1,
      },
      "xxl": Object {
        "opacity": 1,
      },
    },
  },
}
`;

exports[`getBackgroundStyles Get correct block background styles for general responsive stage 1`] = `
Object {
  "maxi-test > .maxi-background-displayer": Object {
    "border": Object {
      "general": Object {},
      "l": Object {},
      "m": Object {},
      "s": Object {},
      "xl": Object {},
      "xs": Object {},
      "xxl": Object {},
    },
  },
  "maxi-test > .maxi-background-displayer .maxi-background-displayer__0": Object {
    "color": Object {
      "general": Object {
        "background-color": "rgba(var(--maxi-light-color-1),1)",
        "clip-path": "none",
        "display": "block",
      },
      "l": Object {
        "background-color": "rgba(var(--maxi-light-color-1),1)",
        "clip-path": "none",
      },
      "label": "Background Color",
      "m": Object {
        "background-color": "rgba(var(--maxi-light-color-1),1)",
        "clip-path": "none",
      },
      "s": Object {
        "background-color": "rgba(var(--maxi-light-color-1),1)",
        "clip-path": "none",
      },
      "xl": Object {
        "background-color": "rgba(var(--maxi-light-color-1),1)",
        "clip-path": "none",
      },
      "xs": Object {
        "background-color": "rgba(var(--maxi-light-color-1),1)",
        "clip-path": "none",
      },
      "xxl": Object {
        "background-color": "rgba(var(--maxi-light-color-1),1)",
        "clip-path": "none",
      },
    },
  },
  "maxi-test > .maxi-background-displayer .maxi-background-displayer__1": Object {
    "image": Object {
      "general": Object {
        "display": "block",
      },
    },
  },
  "maxi-test > .maxi-background-displayer .maxi-background-displayer__2": Object {
    "video": Object {
      "general": Object {
        "display": "block",
        "opacity": 1,
      },
      "l": Object {
        "opacity": 1,
      },
      "label": "Video Background",
      "m": Object {
        "opacity": 1,
      },
      "s": Object {
        "opacity": 1,
      },
      "xl": Object {
        "opacity": 1,
      },
      "xs": Object {
        "opacity": 1,
      },
      "xxl": Object {
        "opacity": 1,
      },
    },
  },
  "maxi-test > .maxi-background-displayer .maxi-background-displayer__3": Object {
    "gradient": Object {
      "general": Object {
        "clip-path": "none",
        "display": "block",
        "opacity": 1,
      },
      "l": Object {},
      "label": "Background gradient",
      "m": Object {},
      "s": Object {},
      "xl": Object {},
      "xs": Object {},
      "xxl": Object {},
    },
  },
  "maxi-test > .maxi-background-displayer .maxi-background-displayer__4": Object {
    "shape": Object {
      "general": Object {
        "display": "block",
        "width": "100%",
      },
      "l": Object {
        "width": "100%",
      },
      "label": "SVG Wrapper Background",
      "m": Object {
        "width": "100%",
      },
      "s": Object {
        "width": "100%",
      },
      "xl": Object {
        "width": "100%",
      },
      "xs": Object {
        "width": "100%",
      },
      "xxl": Object {
        "width": "100%",
      },
    },
  },
  "maxi-test > .maxi-background-displayer .maxi-background-displayer__4 > svg:first-child": Object {
    "shape": Object {},
  },
  "maxi-test > .maxi-background-displayer .maxi-background-displayer__4 > svg:first-child pattern image": Object {
    "shape": Object {},
  },
  "maxi-test > .maxi-background-displayer .maxi-background-displayer__4 svg *": Object {
    "shape": Object {
      "general": Object {
        "fill": "rgba(var(--maxi-light-color-5),1)",
      },
      "l": Object {
        "fill": "rgba(var(--maxi-light-color-5),1)",
      },
      "label": "SVG Background",
      "m": Object {
        "fill": "rgba(var(--maxi-light-color-5),1)",
      },
      "s": Object {
        "fill": "rgba(var(--maxi-light-color-5),1)",
      },
      "xl": Object {
        "fill": "rgba(var(--maxi-light-color-5),1)",
      },
      "xs": Object {
        "fill": "rgba(var(--maxi-light-color-5),1)",
      },
      "xxl": Object {
        "fill": "rgba(var(--maxi-light-color-5),1)",
      },
    },
  },
}
`;

exports[`getBackgroundStyles Get correct block background styles for gradient layer with different values on different responsive stages 1`] = `
Object {
  "maxi-test > .maxi-background-displayer": Object {
    "border": Object {
      "general": Object {},
      "l": Object {},
      "m": Object {},
      "s": Object {},
      "xl": Object {},
      "xs": Object {},
      "xxl": Object {},
    },
  },
  "maxi-test > .maxi-background-displayer .maxi-background-displayer__0": Object {
    "gradient": Object {
      "general": Object {
        "background": "radial-gradient(rgb(6,147,227) 0%,rgb(68,150,185) 52%,rgb(155,81,224) 100%)",
        "clip-path": "polygon(50% 0%, 0% 100%, 100% 100%)",
        "display": "block",
        "opacity": 0.15,
      },
      "l": Object {
        "background": "radial-gradient(rgb(6,147,227) 0%,rgb(89,121,135) 29%,rgb(68,150,185) 52%,rgb(155,81,224) 100%)",
        "clip-path": "polygon(50% 0%, 90% 20%, 100% 60%, 75% 100%, 25% 100%, 0% 60%, 10% 20%)",
        "opacity": 0.8,
      },
      "label": "Background gradient",
      "m": Object {
        "background": "radial-gradient(rgb(6,147,227) 0%,rgb(89,121,135) 29%,rgb(68,150,185) 52%,rgb(155,81,224) 100%)",
      },
      "s": Object {
        "background": "radial-gradient(rgb(6,147,227) 0%,rgb(89,121,135) 29%,rgb(68,150,185) 52%,rgb(118,170,192) 76%,rgb(155,81,224) 100%)",
        "clip-path": "polygon(75% 0%, 100% 50%, 75% 100%, 0% 100%, 25% 50%, 0% 0%)",
        "opacity": 0.17,
      },
      "xl": Object {
        "background": "radial-gradient(rgb(6,147,227) 0%,rgb(68,150,185) 52%,rgb(155,81,224) 100%)",
        "clip-path": "polygon(50% 0%, 0% 100%, 100% 100%)",
        "opacity": 0.15,
      },
      "xs": Object {
        "background": "radial-gradient(rgb(6,147,227) 0%,rgb(89,121,135) 29%,rgb(68,150,185) 52%,rgb(118,170,192) 76%,rgb(155,81,224) 100%)",
      },
      "xxl": Object {
        "background": "radial-gradient(rgb(6,147,227) 0%,rgb(68,150,185) 52%,rgb(155,81,224) 100%)",
        "clip-path": "polygon(20% 0%, 80% 0%, 100% 100%, 0% 100%)",
        "opacity": 0.48,
      },
    },
  },
}
`;

exports[`getBackgroundStyles Get correct block background styles for gradient layer with different values on different responsive stages and hovers 1`] = `
Object {
  "maxi-test > .maxi-background-displayer": Object {
    "border": Object {
      "general": Object {},
      "l": Object {},
      "m": Object {},
      "s": Object {},
      "xl": Object {},
      "xs": Object {},
      "xxl": Object {},
    },
  },
  "maxi-test > .maxi-background-displayer .maxi-background-displayer__0": Object {
    "gradient": Object {
      "general": Object {
        "background": "radial-gradient(rgb(6,147,227) 0%,rgb(68,150,185) 52%,rgb(155,81,224) 100%)",
        "clip-path": "polygon(50% 0%, 0% 100%, 100% 100%)",
        "display": "block",
        "opacity": 0.15,
      },
      "l": Object {
        "background": "radial-gradient(rgb(6,147,227) 0%,rgb(89,121,135) 29%,rgb(68,150,185) 52%,rgb(155,81,224) 100%)",
        "clip-path": "polygon(50% 0%, 90% 20%, 100% 60%, 75% 100%, 25% 100%, 0% 60%, 10% 20%)",
        "opacity": 0.8,
      },
      "label": "Background gradient",
      "m": Object {
        "background": "radial-gradient(rgb(6,147,227) 0%,rgb(89,121,135) 29%,rgb(68,150,185) 52%,rgb(155,81,224) 100%)",
      },
      "s": Object {
        "background": "radial-gradient(rgb(6,147,227) 0%,rgb(89,121,135) 29%,rgb(68,150,185) 52%,rgb(118,170,192) 76%,rgb(155,81,224) 100%)",
        "clip-path": "polygon(75% 0%, 100% 50%, 75% 100%, 0% 100%, 25% 50%, 0% 0%)",
        "opacity": 0.17,
      },
      "xl": Object {
        "background": "radial-gradient(rgb(6,147,227) 0%,rgb(68,150,185) 52%,rgb(155,81,224) 100%)",
        "clip-path": "polygon(50% 0%, 0% 100%, 100% 100%)",
        "opacity": 0.15,
      },
      "xs": Object {
        "background": "radial-gradient(rgb(6,147,227) 0%,rgb(89,121,135) 29%,rgb(68,150,185) 52%,rgb(118,170,192) 76%,rgb(155,81,224) 100%)",
      },
      "xxl": Object {
        "background": "radial-gradient(rgb(6,147,227) 0%,rgb(68,150,185) 52%,rgb(155,81,224) 100%)",
        "clip-path": "polygon(20% 0%, 80% 0%, 100% 100%, 0% 100%)",
        "opacity": 0.48,
      },
    },
  },
}
`;

exports[`getBackgroundStyles Get correct block background styles for image layer with different values on different responsive stages 1`] = `
Object {
  "maxi-test > .maxi-background-displayer": Object {
    "border": Object {
      "general": Object {},
      "l": Object {},
      "m": Object {},
      "s": Object {},
      "xl": Object {},
      "xs": Object {},
      "xxl": Object {},
    },
  },
  "maxi-test > .maxi-background-displayer .maxi-background-displayer__0": Object {
    "image": Object {
      "general": Object {
        "background-attachment": "local",
        "background-clip": "padding-box",
        "background-image": "url('http://localhost:8888/wp-content/uploads/2021/10/maxi-PIL-65.jpg')",
        "background-origin": "border-box",
        "background-position": "left top",
        "background-repeat": "repeat-x",
        "background-size": "cover",
        "clip-path": "polygon(50% 0%, 0% 100%, 100% 100%)",
        "display": "block",
        "opacity": 0.52,
      },
      "l": Object {
        "background-attachment": "fixed",
        "background-clip": "padding-box",
        "background-origin": "content-box",
        "background-position": "right top",
        "background-repeat": "space",
        "background-size": "contain",
        "clip-path": "polygon(20% 0%, 80% 0%, 100% 100%, 0% 100%)",
      },
      "label": "Background Image",
      "m": Object {
        "background-position": "right top",
        "background-size": "contain",
        "opacity": 0.91,
      },
      "s": Object {
        "background-attachment": "scroll",
        "background-position": "center top",
        "background-repeat": "repeat-x",
        "background-size": "contain",
        "clip-path": "polygon(0% 20%, 60% 20%, 60% 0%, 100% 50%, 60% 100%, 60% 80%, 0% 80%)",
      },
      "xl": Object {
        "background-attachment": "local",
        "background-clip": "padding-box",
        "background-origin": "border-box",
        "background-position": "left top",
        "background-repeat": "repeat-x",
        "background-size": "cover",
        "clip-path": "polygon(50% 0%, 0% 100%, 100% 100%)",
        "opacity": 0.52,
      },
      "xs": Object {
        "background-position": "center top",
        "background-size": "auto",
      },
      "xxl": Object {
        "background-position": "left top",
        "background-size": "cover",
        "clip-path": "polygon(50% 0%, 100% 38%, 82% 100%, 18% 100%, 0% 38%)",
        "opacity": 0.11,
      },
    },
  },
}
`;

exports[`getBackgroundStyles Get correct block background styles for image layer with different values on different responsive stages and hovers 1`] = `
Object {
  "maxi-test > .maxi-background-displayer": Object {
    "border": Object {
      "general": Object {},
      "l": Object {},
      "m": Object {},
      "s": Object {},
      "xl": Object {},
      "xs": Object {},
      "xxl": Object {},
    },
  },
  "maxi-test > .maxi-background-displayer .maxi-background-displayer__0": Object {
    "image": Object {
      "general": Object {
        "background-attachment": "local",
        "background-clip": "padding-box",
        "background-image": "url('http://localhost:8888/wp-content/uploads/2021/10/maxi-PIL-65.jpg')",
        "background-origin": "border-box",
        "background-position": "left top",
        "background-repeat": "repeat-x",
        "background-size": "cover",
        "clip-path": "polygon(50% 0%, 0% 100%, 100% 100%)",
        "display": "block",
        "opacity": 0.52,
      },
      "l": Object {
        "background-attachment": "fixed",
        "background-clip": "padding-box",
        "background-origin": "content-box",
        "background-position": "right top",
        "background-repeat": "space",
        "background-size": "contain",
        "clip-path": "polygon(20% 0%, 80% 0%, 100% 100%, 0% 100%)",
      },
      "label": "Background Image",
      "m": Object {
        "background-position": "right top",
        "background-size": "contain",
        "opacity": 0.91,
      },
      "s": Object {
        "background-attachment": "scroll",
        "background-position": "center top",
        "background-repeat": "repeat-x",
        "background-size": "contain",
        "clip-path": "polygon(0% 20%, 60% 20%, 60% 0%, 100% 50%, 60% 100%, 60% 80%, 0% 80%)",
      },
      "xl": Object {
        "background-attachment": "local",
        "background-clip": "padding-box",
        "background-origin": "border-box",
        "background-position": "left top",
        "background-repeat": "repeat-x",
        "background-size": "cover",
        "clip-path": "polygon(50% 0%, 0% 100%, 100% 100%)",
        "opacity": 0.52,
      },
      "xs": Object {
        "background-position": "center top",
        "background-size": "auto",
      },
      "xxl": Object {
        "background-position": "left top",
        "background-size": "cover",
        "clip-path": "polygon(50% 0%, 100% 38%, 82% 100%, 18% 100%, 0% 38%)",
        "opacity": 0.11,
      },
    },
  },
}
`;

exports[`getBackgroundStyles Get correct block background styles for image layer with parallax and different values on different responsive stages 1`] = `
Object {
  "maxi-test > .maxi-background-displayer": Object {
    "border": Object {
      "general": Object {},
      "l": Object {},
      "m": Object {},
      "s": Object {},
      "xl": Object {},
      "xs": Object {},
      "xxl": Object {},
    },
  },
  "maxi-test > .maxi-background-displayer .maxi-background-displayer__0": Object {
    "image": Object {
      "general": Object {
        "display": "block",
      },
    },
  },
  "maxi-test > .maxi-background-displayer .maxi-background-displayer__0 img": Object {
    "image": Object {
      "general": Object {
        "clip-path": "polygon(50% 0%, 0% 100%, 100% 100%)",
        "display": "block",
        "object-fit": "cover",
        "object-position": "left top",
        "opacity": 0.52,
      },
      "l": Object {
        "clip-path": "polygon(20% 0%, 80% 0%, 100% 100%, 0% 100%)",
        "object-fit": "contain",
        "object-position": "right top",
      },
      "label": "Background Image",
      "m": Object {
        "object-fit": "contain",
        "object-position": "right top",
        "opacity": 0.91,
      },
      "s": Object {
        "clip-path": "polygon(0% 20%, 60% 20%, 60% 0%, 100% 50%, 60% 100%, 60% 80%, 0% 80%)",
        "object-fit": "contain",
        "object-position": "center top",
      },
      "xl": Object {
        "clip-path": "polygon(50% 0%, 0% 100%, 100% 100%)",
        "object-fit": "cover",
        "object-position": "left top",
        "opacity": 0.52,
      },
      "xs": Object {
        "object-fit": "auto",
        "object-position": "center top",
      },
      "xxl": Object {
        "clip-path": "polygon(50% 0%, 100% 38%, 82% 100%, 18% 100%, 0% 38%)",
        "object-fit": "cover",
        "object-position": "left top",
        "opacity": 0.11,
      },
    },
  },
}
`;

exports[`getBackgroundStyles Get correct block background styles for shape layer with different values on different responsive stages 1`] = `
Object {
  "maxi-test > .maxi-background-displayer": Object {
    "border": Object {
      "general": Object {},
      "l": Object {},
      "m": Object {},
      "s": Object {},
      "xl": Object {},
      "xs": Object {},
      "xxl": Object {},
    },
  },
  "maxi-test > .maxi-background-displayer .maxi-background-displayer__0": Object {
    "shape": Object {
      "general": Object {
        "display": "block",
        "width": "34%",
      },
      "l": Object {
        "width": "34%",
      },
      "label": "SVG Wrapper Background",
      "m": Object {
        "width": "34%",
      },
      "s": Object {
        "width": "34%",
      },
      "xl": Object {
        "width": "34%",
      },
      "xs": Object {
        "width": "34%",
      },
      "xxl": Object {
        "width": "84%",
      },
    },
  },
  "maxi-test > .maxi-background-displayer .maxi-background-displayer__0 > svg:first-child": Object {
    "shape": Object {
      "general": Object {
        "transform": "scale(0.72) rotate(104deg) ",
      },
      "l": Object {
        "transform": "scale(0.72) rotate(104deg) ",
      },
      "m": Object {
        "transform": "scale(0.72) rotate(104deg) ",
      },
      "s": Object {
        "transform": "scale(0.72) rotate(104deg) ",
      },
      "xl": Object {
        "transform": "scale(0.72) rotate(104deg) ",
      },
      "xs": Object {
        "transform": "scale(0.72) rotate(104deg) ",
      },
      "xxl": Object {
        "transform": "scale(0.72) rotate(104deg) ",
      },
    },
  },
  "maxi-test > .maxi-background-displayer .maxi-background-displayer__0 > svg:first-child pattern image": Object {
    "shape": Object {
      "general": Object {
        "transform": "scale(1.3888888888888888) rotate(-104deg) ",
      },
      "l": Object {
        "transform": "scale(1.3888888888888888) rotate(-104deg) ",
      },
      "m": Object {
        "transform": "scale(1.3888888888888888) rotate(-104deg) ",
      },
      "s": Object {
        "transform": "scale(1.3888888888888888) rotate(-104deg) ",
      },
      "xl": Object {
        "transform": "scale(1.3888888888888888) rotate(-104deg) ",
      },
      "xs": Object {
        "transform": "scale(1.3888888888888888) rotate(-104deg) ",
      },
      "xxl": Object {
        "transform": "scale(1.3888888888888888) rotate(-104deg) ",
      },
    },
  },
  "maxi-test > .maxi-background-displayer .maxi-background-displayer__0 svg *": Object {
    "shape": Object {
      "general": Object {
        "fill": "rgba(var(--maxi-light-color-5),1)",
      },
      "l": Object {
        "fill": "rgba(var(--maxi-light-color-3),0.37)",
      },
      "label": "SVG Background",
      "m": Object {
        "fill": "rgba(var(--maxi-light-color-3),0.37)",
      },
      "s": Object {
        "fill": "rgba(var(--maxi-light-color-7),0.37)",
      },
      "xl": Object {
        "fill": "rgba(var(--maxi-light-color-2),0.37)",
      },
      "xs": Object {
        "fill": "rgba(var(--maxi-light-color-7),0.37)",
      },
      "xxl": Object {
        "fill": "rgba(var(--maxi-light-color-2),0.37)",
      },
    },
  },
}
`;

exports[`getBackgroundStyles Get correct block background styles for shape layer with different values on different responsive stages and hovers 1`] = `
Object {
  "maxi-test > .maxi-background-displayer": Object {
    "border": Object {
      "general": Object {},
      "l": Object {},
      "m": Object {},
      "s": Object {},
      "xl": Object {},
      "xs": Object {},
      "xxl": Object {},
    },
  },
  "maxi-test > .maxi-background-displayer .maxi-background-displayer__0": Object {
    "shape": Object {
      "general": Object {
        "display": "block",
        "width": "34%",
      },
      "l": Object {
        "width": "34%",
      },
      "label": "SVG Wrapper Background",
      "m": Object {
        "width": "34%",
      },
      "s": Object {
        "width": "34%",
      },
      "xl": Object {
        "width": "34%",
      },
      "xs": Object {
        "width": "34%",
      },
      "xxl": Object {
        "width": "84%",
      },
    },
  },
  "maxi-test > .maxi-background-displayer .maxi-background-displayer__0 > svg:first-child": Object {
    "shape": Object {},
  },
  "maxi-test > .maxi-background-displayer .maxi-background-displayer__0 > svg:first-child pattern image": Object {
    "shape": Object {},
  },
  "maxi-test > .maxi-background-displayer .maxi-background-displayer__0 svg *": Object {
    "shape": Object {
      "general": Object {
        "fill": "rgba(var(--maxi-light-color-5),1)",
      },
      "l": Object {
        "fill": "rgba(var(--maxi-light-color-3),0.37)",
      },
      "label": "SVG Background",
      "m": Object {
        "fill": "rgba(var(--maxi-light-color-3),0.37)",
      },
      "s": Object {
        "fill": "rgba(var(--maxi-light-color-7),0.37)",
      },
      "xl": Object {
        "fill": "rgba(var(--maxi-light-color-2),0.37)",
      },
      "xs": Object {
        "fill": "rgba(var(--maxi-light-color-7),0.37)",
      },
      "xxl": Object {
        "fill": "rgba(var(--maxi-light-color-2),0.37)",
      },
    },
  },
}
`;

exports[`getBackgroundStyles Get correct block background styles for video layer with different values on different responsive stages 1`] = `
Object {
  "maxi-test > .maxi-background-displayer": Object {
    "border": Object {
      "general": Object {},
      "l": Object {},
      "m": Object {},
      "s": Object {},
      "xl": Object {},
      "xs": Object {},
      "xxl": Object {},
    },
  },
  "maxi-test > .maxi-background-displayer .maxi-background-displayer__0": Object {
    "video": Object {
      "general": Object {
        "background": "url(http://localhost:8888/wp-content/uploads/2021/10/maxi-PIL-65.jpg)",
        "background-size": "cover",
        "display": "block",
        "opacity": 0.11,
      },
      "l": Object {
        "background": "url(http://localhost:8888/wp-content/uploads/2021/09/maxi-a6848490-test.jpg)",
        "background-size": "cover",
        "opacity": 0.65,
      },
      "label": "Video Background",
      "m": Object {
        "background": "url(http://localhost:8888/wp-content/uploads/2021/09/maxi-a6848490-test.jpg)",
        "background-size": "cover",
        "opacity": 0.65,
      },
      "s": Object {
        "background": "url(http://localhost:8888/wp-content/uploads/2021/09/maxi-a6848490-test.jpg)",
        "background-size": "cover",
        "opacity": 0.25,
      },
      "xl": Object {
        "background": "url(http://localhost:8888/wp-content/uploads/2021/10/maxi-PIL-65.jpg)",
        "background-size": "cover",
        "opacity": 0.11,
      },
      "xs": Object {
        "background": "url(http://localhost:8888/wp-content/uploads/2021/09/maxi-a6848490-test.jpg)",
        "background-size": "cover",
        "opacity": 0.9,
      },
      "xxl": Object {
        "background": "url(http://localhost:8888/wp-content/uploads/2021/09/maxi-IMG_9344-scaled-1.jpg)",
        "background-size": "cover",
        "opacity": 0.37,
      },
    },
  },
}
`;

exports[`getBackgroundStyles Get correct block background styles for video layer with different values on different responsive stages and hovers 1`] = `
Object {
  "maxi-test > .maxi-background-displayer": Object {
    "border": Object {
      "general": Object {},
      "l": Object {},
      "m": Object {},
      "s": Object {},
      "xl": Object {},
      "xs": Object {},
      "xxl": Object {},
    },
  },
  "maxi-test > .maxi-background-displayer .maxi-background-displayer__0": Object {
    "video": Object {
      "general": Object {
        "background": "url(http://localhost:8888/wp-content/uploads/2021/10/maxi-PIL-65.jpg)",
        "background-size": "cover",
        "display": "block",
        "opacity": 0.11,
      },
      "l": Object {
        "background": "url(http://localhost:8888/wp-content/uploads/2021/09/maxi-a6848490-test.jpg)",
        "background-size": "cover",
        "opacity": 0.65,
      },
      "label": "Video Background",
      "m": Object {
        "background": "url(http://localhost:8888/wp-content/uploads/2021/09/maxi-a6848490-test.jpg)",
        "background-size": "cover",
        "opacity": 0.65,
      },
      "s": Object {
        "background": "url(http://localhost:8888/wp-content/uploads/2021/09/maxi-a6848490-test.jpg)",
        "background-size": "cover",
        "opacity": 0.25,
      },
      "xl": Object {
        "background": "url(http://localhost:8888/wp-content/uploads/2021/10/maxi-PIL-65.jpg)",
        "background-size": "cover",
        "opacity": 0.11,
      },
      "xs": Object {
        "background": "url(http://localhost:8888/wp-content/uploads/2021/09/maxi-a6848490-test.jpg)",
        "background-size": "cover",
        "opacity": 0.9,
      },
      "xxl": Object {
        "background": "url(http://localhost:8888/wp-content/uploads/2021/09/maxi-IMG_9344-scaled-1.jpg)",
        "background-size": "cover",
        "opacity": 0.37,
      },
    },
  },
}
`;

exports[`getBackgroundStyles Get correct simple background styles 1`] = `
Object {
  "background": Object {
    "general": Object {
      "background-color": "rgba(var(--maxi-light-color-1),0.39)",
    },
    "l": Object {
      "background": "linear-gradient(135deg,rgb(6,147,227) 0%,rgb(73,131,156) 39%,rgb(155,81,224) 100%)",
      "opacity": 0.29,
    },
    "label": "Background gradient",
    "m": Object {
      "background-color": "rgba(var(--maxi-light-color-4),0.39)",
    },
    "s": Object {
      "background-color": "rgba(43,43,179,0.39)",
    },
    "xl": Object {
      "background-color": "rgba(var(--maxi-light-color-1),0.39)",
    },
    "xs": Object {
      "background": "linear-gradient(135deg,rgb(6,147,227) 0%,rgb(73,131,156) 39%,rgb(102,186,223) 67%,rgb(155,81,224) 100%)",
    },
    "xxl": Object {
      "background-color": "rgba(var(--maxi-light-color-2),0.39)",
    },
  },
}
`;
